--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -58,7 +58,7 @@
                 @if (nguoiDung == null)
                 {                    
                     <ul class="chua-dang-nhap">
-                        <li><a href="/NguoiDung/DangNhap">Đăng nhập</a></li>
+                        <li><a data-chuc-nang="dang-nhap">Đăng nhập</a></li>
                         <li><a href="/NguoiDung/DangKy">Đăng ký</a></li>
                     </ul>
                 }
