--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     var ketQua = BUSLayer.BinhLuanBUS.layTheoDoiTuong((string)ViewData["LoaiDoiTuong"], (int)ViewData["MaDoiTuong"]);
     var danhSachBinhLuan = ketQua.trangThai == 0 ? ketQua.ketQua as List<DTOLayer.BinhLuanDTO> : null;
-    var coQuyenBinhLuan = (bool)ViewData["CoQuyenBinhLuan"];
+    var coQuyenBinhLuan = Session["NguoiDung"] != null && (bool)ViewData["CoQuyenBinhLuan"];
 }
 
 <section data-doi-tuong="khung-binh-luan" class="khung-binh-luan">
