--- a/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
@@ -10,7 +10,7 @@
     
     if (maNguoiDung.HasValue)
     {
-        dsQuyen = QuyenView.layDSQuyen("KH", maKhoaHoc);
+        dsQuyen = QuyenView.layDSQuyen("KH", maKhoaHoc, maNguoiDung);
         
         var ketQua = BUSLayer.KhoaHoc_NguoiDungBUS.layTheoMaKhoaHocVaMaNguoiDung(maKhoaHoc, maNguoiDung.Value);
         if (ketQua.trangThai != 0)
