--- a/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
@@ -2,8 +2,8 @@
 @using LCTMoodle.LCTView
 @model List<DTOLayer.BaiVietDienDanDTO>
 @{
-    int maKhoaHoc = (int)Session["MaKhoaHoc"];
-    int? maNguoiDung = Session["MaNguoiDung"] as int?;
+    int maKhoaHoc = (int)ViewData["MaKhoaHoc"];
+    int? maNguoiDung = Session["NguoiDung"] as int?;
 
     string[] dsQuyen;
     bool laThanhVien;
