--- a/LCTMoodle/Views/Quyen/_DanhSach_NguoiDung_Tim.cshtml
+++ b/LCTMoodle/Views/Quyen/_DanhSach_NguoiDung_Tim.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<DTOLayer.NguoiDungDTO>[]
+﻿@using LCTMoodle.LCTView
+@model List<DTOLayer.NguoiDungDTO>[]
 
 @foreach (var nguoiDung in Model[0])
 {
@@ -9,7 +10,7 @@
 {
     <li data-doi-tuong="item-nguoi-dung" class="item ngoai-nhom" data-ma="@nguoiDung.ma">
         <img src="/boy.png/" alt="Alternate Text" />
-        <a href="#">@(nguoiDung.ho + " " + nguoiDung.ten)</a>
+        @NguoiDungView.link(nguoiDung)
         <section class="khung-chuc-nang-lct">
             <ul data-doi-tuong="cnnd-@nguoiDung.ma">
                 <li>
