--- a/LCTMoodle/Views/Quyen/_Item_NguoiDung.cshtml
+++ b/LCTMoodle/Views/Quyen/_Item_NguoiDung.cshtml
@@ -3,7 +3,7 @@
 
 <li data-doi-tuong="item-nguoi-dung" class="item" data-ma="@Model.ma">
     <img src="/boy.png/" />
-    <a href="#">@NguoiDungView.link(Model)</a>
+    @NguoiDungView.link(Model)
     <section class="khung-chuc-nang-lct">
         <ul data-doi-tuong="cnnd-@Model.ma">
             <li>
