--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -65,7 +65,7 @@
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="text" name="Email" data-validate="email bat-buoc" />
+                                    <input type="text" name="Email" id="email" data-validate="email bat-buoc" />
                                 </article>
                             </section>
                         </li>
@@ -139,7 +139,7 @@
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="checkbox" name="ChapNhanQuyDinh" data-text="Chấp nhận &lt;a href='#' style='color:#08c;'&gt;quy định&lt;/a&gt; của Mạng xã hội LCT Moodle" style="width:auto;" />
+                                    <input type="checkbox" name="ChapNhanQuyDinh" data-text="Chấp nhận &lt;a href='#' id='dieu_khoan' style='color:#08c;'&gt;quy định&lt;/a&gt; của Mạng xã hội LCT Moodle" style="width:auto;" />
                                 </article>
                             </section>
                         </li>
@@ -148,7 +148,7 @@
                         <button type="submit" class="chap-nhan">
                             Đăng Ký
                         </button>
-                        <button type="reset" class="can-than">
+                        <button type="button" data-chuc-nang="reset" class="can-than">
                             Làm lại
                         </button>
                     </section>
